Bug 631437: Add length to SVGXXXList interfaces and make them respond to array indexing (v4) r=jwatt,bzbarsky